# alsa-none

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
autom4te.cache/: output.0  traces.0
doc/: Makefile.in
none/: Makefile.am  Makefile.in  conf_none.c  ctl_none.c  none.h  pcm_none.c
src/: Makefile.am  Makefile.in  ctl_none.c  pcm_none.c
