AC_PREREQ(2.59)
AC_INIT(none/pcm_none.c)
AM_INIT_AUTOMAKE(alsa-plugin-none, 1.0.20)
AC_PREFIX_DEFAULT(/usr)

AC_CONFIG_HEADERS(config.h)
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_PROG_INSTALL
AC_DISABLE_STATIC
AM_PROG_LIBTOOL
AC_HEADER_STDC

CC_NOUNDEFINED

PKG_CHECK_MODULES(ALSA, alsa >= 1.0.11)
AC_CHECK_LIB(asound, snd_pcm_ioplug_create,,
	     AC_ERROR([*** libasound has no external plugin SDK]), -ldl)

AC_ARG_ENABLE([none],
      AS_HELP_STRING([--disable-none], [Disable building of none plugin]))

AM_CONDITIONAL(HAVE_NULL, test x$HAVE_NULL = xyes)

dnl ALSA plugin directory
test "x$prefix" = xNONE && prefix=$ac_default_prefix
test "x$exec_prefix" = xNONE && exec_prefix=$prefix

AC_ARG_WITH(plugindir,
    AS_HELP_STRING([--with-plugindir=dir],
	[path where ALSA plugin files are stored]),
    plugindir="$withval", plugindir="")
if test -z "$plugindir"; then
    eval dir="$libdir"
    case "$dir" in
    /*) ;;
    *) dir="$dir"
    esac
    plugindir="$dir/alsa-lib"
fi
AC_DEFINE_UNQUOTED(ALSA_PLUGIN_DIR, "$plugindir", [directory containing ALSA add-on modules])
ALSA_PLUGIN_DIR="$plugindir"
AC_SUBST(ALSA_PLUGIN_DIR)

SAVE_PLUGINS_VERSION

AC_OUTPUT([
	Makefile
	none/Makefile
])

dnl Show the build conditions

echo
echo "Plugin directory: $ALSA_PLUGIN_DIR"
echo "ALSA_CFLAGS: $ALSA_CFLAGS"
echo "ALSA_LIBS: $ALSA_LIBS"
echo "Null plugin:  $HAVE_NULL"
if test "$HAVE_NULL" = "yes"; then
  echo "  none_CFLAGS: $none_CFLAGS"
  echo "  none_LIBS: $none_LIBS"
fi
